# LLM-cookbook

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
Learning/HF_MCP_course/: README.md  mcp_client.py  mcp_client_hf.py  mcp_server_gradio.py
Learning/HF_MCP_course/my-agent/: agent.json
OpenAI-Agents-SDK/src/: get_client.py  hello_world.py
notebooks/: fundaments.ipynb  llm_tool.ipynb  pdf_processing.ipynb  rag_helloworld.ipynb  vectordb.ipynb
notebooks/data/: toy.csv
notebooks/llm_api_provider/: tryout_openrouter.ipynb
src/llm_cookbook/: __init__.py
src/llm_cookbook/technologies/: __init__.py
src/llm_cookbook/technologies/langgraph/: hello_world.py
src/llm_cookbook/technologies/mcp/: README.md  __init__.py  fastmcp_client_example.py  fastmcp_server_example.py
src/llm_cookbook/technologies/openai_agents_sdk/: README.md  __init__.py  basic_agent.py  hello_world.py
src/llm_cookbook/utils/: __init__.py  get_client.py  tool_creation.py
