[project]
name = "llm-cookbook"
version = "0.1.0"
description = "A knowledge base for LLM learning and experimentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.1",
    "openai>=1.76.2",
    "openai-agents>=0.0.14",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cookbook"]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
