[project]
name = "llm-cookbook"
version = "0.1.0"
description = "A knowledge base for LLM learning and experimentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.9",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "jupyterlab>=4.4.1",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.17",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.5",
    "llama-index>=0.12.37",
    "llama-index-embeddings-langchain>=0.3.0",
    "llama-index-llms-azure-openai>=0.3.2",
    "llama-index-vector-stores-chroma>=0.4.1",
    "mcp[cli]>=1.7.1",
    "numpy>=2.2.6",
    "openai>=1.76.2",
    "openai-agents>=0.0.14",
    "pandas>=2.2.3",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cookbook"]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]
